2006-01-05  Thomas Vander Stichele  <thomas at apestaart dot org>

	* doc/random/component:
	* doc/random/processes:
	  add notes about component creation phase and error handling
	* flumotion/job/job.py:
	* flumotion/manager/admin.py:
	  make it so components that ran into an error during creation
	  stop the job process, and the admin can restart those sad
	  non-running components.

2006-01-03  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/job/job.py:
	  clean up internal method names
	  privatize more internal variables

2005-12-31  Thomas Vander Stichele  <thomas at apestaart dot org>

	* data/Makefile.am:
	* data/upgrade-to-0.2.0.xsl:
	  add an xsl stylesheet to transform pre-0.2.0 config files
	* NEWS:
	  add notes on how to use it

2005-12-31  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/admin/gtk/parts.py:
	  make it so that "Worker" column shows in italics the worker
	  that needs to log in for the component to be able to start
	* tests/ComponentsView.py:
	* tests/vorbis.py:
	  update tests

2005-12-31  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/wizard/save.py:
	  fix syntax error

2005-12-29  Thomas Vander Stichele  <thomas at apestaart dot org>

	* NEWS:
	  update
	* flumotion/common/common.py:
	* flumotion/test/test_common.py:
	  add common.compareVersions() method and test

2005-12-29  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/wizard/save.py:
	  save project and version in xml

2005-12-28  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/consumers/disker/disker.py:
	  move var declaration to class, out of setup
	  check if self.location is set from size rotation callback
	* flumotion/launch/main.py:
	  support longs

2005-12-28  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/consumers/httpstreamer/http.py:
	* flumotion/component/consumers/httpstreamer/http.xml:
	  default to 8800 for port