@@ -1,3 +1,9 @@
+2006-01-06  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* flumotion/manager/component.py:
+	  privatize a private instance var
+	  collapse an else branch
+
 2006-01-05  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* doc/random/component:
